_versions/v07/pipeplan/README.md
# PipePlan

A declarative, configuration-driven batch ETL framework on **pandas**. Pipelines
are described in modular YAML (or JSON) blueprints; the engine validates them
with **Pydantic v2**, builds a task DAG, and executes the data flow over an
in-memory dataframe state. The core stays pristine — every transform, expression,
notifier, and secret provider is resolved through a registry, extensible via
`pyproject.toml` entry points.

This is **version 1.0** — the canonical blueprint format is `apiVersion: pipeplan/v1`.

## Install

```bash
pip install -e ".[dev]"          # core + openpyxl, pyarrow, rapidfuzz, pytest
pip install -e ".[postgres]"     # psycopg2
pip install -e ".[access]"       # pyodbc + sqlalchemy-access (+ OS ODBC driver)
```

## Run the demo

```bash
python examples/demo/run_demo.py
```

It generates synthetic sources (a messy Excel workbook, a regions JSON, a SQLite
inventory DB), runs the modular blueprint under `examples/demo/pipeline/`, and
prints the resulting warehouse tables. It is idempotent — re-running reuses
transform checkpoints and produces identical output.

## CLI

```bash
pipeplan validate examples/demo/pipeline/pipeline.yaml --param run_date=2026-01-01
pipeplan run      examples/demo/pipeline/pipeline.yaml --param run_date=2026-01-01
pipeplan schema   > pipeplan.schema.json     # JSON Schema of the blueprint format
```

## Architecture

Control flow and data flow are strictly separated:

- **Orchestrator** builds the DAG from each task's `depends_on` plus the
  producer/consumer edges implied by `output`/`input`/`${pipe}` operands (so
  ordering is correct even when `depends_on` is omitted), detects cycles with
  `graphlib.TopologicalSorter`, and runs independent tasks concurrently up to
  `orchestration.max_parallelism`.
- **Engine** is the data flow: tasks read inputs from and write outputs to a
  thread-safe `Dict[str, pd.DataFrame]` state via explicit `input`/`output`.

Transforms are tiered: **element** (1:1 column ops), **set** (row/column masking
and reshaping), and **collection** (relational ops across frames). Collection ops
bind the dataframe flowing through a task with the explicit `${pipe}` token; a
missing operand is an error, never an implicit guess.

## Interpolation namespaces

Resolved at load time over the parsed structure (type-aware: a whole-value token
yields the raw value, so `"${var:regions}"` becomes a list):

| Token | Source |
|-------|--------|
| `${env:NAME}`    | process environment |
| `${var:name}`    | the `vars:` block |
| `${param:name}`  | a typed run parameter |
| `${secret:path}` | the secret provider (redacted in logs) |
| `${pipe}`        | runtime only — the frame flowing through a task (collection operand) |
| `${pipe:col}`    | runtime only — a column of the flowing frame (see below) |

### Referencing the flowing frame's columns

`${pipe:column}` resolves at execution time against the frame flowing through a
task, in a value/operand slot (e.g. a `filter` value, a `derive` operand). Its
shape — which you choose explicitly — is what an operation responds to, so the
direction of flow is never inferred:

- **Horizontal / aligned** — bare `${pipe:col}` is the column as a Series, used
  position-aligned: `{ amount: { op: ">", value: "${pipe:cost}" } }` keeps rows
  where `amount > cost`.
- **Vertical / reduced** — `${pipe:col|reducer}` collapses the column across rows
  to a scalar or list: `{ amount: { op: ">=", value: "${pipe:amount|mean}" } }`
  keeps rows at/above the mean; `{ id: { op: in, value: "${pipe:valid|unique}" } }`
  tests membership. Reducers: `unique`/`list`/`set`/`values` (→ list) and
  `min`/`max`/`mean`/`median`/`sum`/`std`/`var`/`count`/`nunique`/`first`/`last`
  (→ scalar). In a `derive` expression use the node form `{ pipe: "col|reducer" }`.

The string form also works in `fillna` for aggregate imputation, e.g.
`fillna: { amount: "${pipe:amount|median}" }`.

## Schema contracts & expectations

A `schemas:` block declares per-dataframe contracts (dtype, nullable, unique,
allowed, checks, primary/foreign keys, strict). Tasks attach them via
`input_contract` / `output_contract` / a step `contract`, enforced per
`validate: off | warn | strict`. Softer `expectations` (row counts, null rates,
value bounds) can `warn` or `fail`.

## Transforms

`label, map, replace, cast, affix, normalize, derive, fillna` (element);
`filter, sort, dedupe, group, select, drop, window` (set);
`join, concat, fuzzy_join` (collection). `group` requires an explicit `agg`.
`cast` supports `on_error: quarantine` to divert un-parseable rows to a
`<output>__rejected` frame.

Collection combination has two axes:

- **Horizontal** — `join` (alias `merge`): widen records by attaching another
  frame's attributes, matched on key(s); `how` defaults to `left`.
- **Vertical** — `concat` (aliases `append`, `union`): lengthen a frame by
  stacking records from several frames. `columns: outer` (default) keeps the
  union of columns; `columns: inner` keeps only shared columns.

Both bind the flowing frame with `${pipe}` and name other frames from the state.

## Adapters & resources

Adapters are the extract-and-load extension point, resolved from a registry
(entry-point group `pipeplan.adapters`) by the resource's `adapter` kind — an
open string, so new resource families are first-class without a schema change.
Bundled families:

- **`file`** — pandas file I/O (excel/csv/tsv/json/parquet); `replace`/`append`,
  atomic (temp-file + rename), column-aligned appends.
- **`db`** — relational, via SQLAlchemy, for everything from SQLite/Access to
  Postgres/MySQL/SQL Server; the full set of load modes plus dialect compilers.
  Lives in its own `adapters/sql/` subpackage.
- **`document`** — JSON / NoSQL document store (the shape of MongoDB, DynamoDB,
  Firestore, CouchDB). Nested documents flatten to dotted columns on read and
  are rebuilt on write; `replace`/`append`/`upsert`/`delete` are implemented
  natively per-document by key (no SQL). `scd2` is rejected as a relational
  pattern.

The contract is storage-agnostic — `read(collection) -> DataFrame` and
`write_batch(requests)` over the shared `LoadMode` vocabulary — so the load
*modes* mean the same thing across families while each implements them in its own
terms. A resource's `allow: [read, write]` list is enforced in the adapter. A new
backend (a REST API, an object store, another database) is one registered
`Adapter` subclass, addable out-of-tree.

## Load phase

Modes: `replace` (optionally `write.partition_by`-scoped), `append`, `upsert`,
`delete`, and `scd2` (Type-2 history via `effective_from`/`effective_to`/
`current_flag`). All idempotent for a given key/partition.

Each mode is a **load strategy** resolved from a registry (entry-point group
`pipeplan.load_strategies`), not a hardcoded branch — so new modes (`merge`,
soft-delete, `scd4`, …) can be added out-of-tree. Strategies are set-based, use
explicit column lists (never `SELECT *`), and stage into uniquely-named temp
tables.

Key guarantees:

- **Atomic loads.** A load task's steps run in one transaction (SQLite included —
  the adapter enables transactional DDL), so a multi-table load fully lands or
  fully rolls back. Retrying a failed task is therefore safe.
- **Schema-preserving `replace`.** `replace` truncates and reloads rather than
  dropping the table, so PKs, indexes, and column types survive. When a target
  is created, its DDL comes from the step's schema contract (typed columns, NOT
  NULL, primary key) rather than pandas type inference.
- **Watermarks commit only on success.** An incremental cursor advances after the
  dependent load succeeds, never at read time, so a failed load can't skip rows
  on the next run.
- **SCD2 is incremental and deterministic.** Only current rows' key + tracked
  columns are read to detect change; superseded versions are closed with a
  set-based `UPDATE` and new versions inserted (unchanged rows are never
  rewritten). Effective dates come from the run's logical timestamp, not
  wall-clock.
- **Load metrics.** Each write returns rows inserted/updated/deleted, logged per
  step.
- **Dialect-native fast-paths.** `upsert` is a true update-or-insert that never
  deletes. When the key is backed by a unique/primary-key constraint it uses the
  native construct — `INSERT ... ON CONFLICT` (SQLite/Postgres), `ON DUPLICATE
  KEY` (MySQL), `MERGE` (SQL Server). Otherwise the same semantics run portably:
  `UPDATE` the matched rows (only the incoming non-key columns, so target-only
  columns survive) then `INSERT ... WHERE NOT EXISTS` the rest. Either path
  preserves target-only columns and fires update/insert triggers correctly. On
  Postgres, bulk appends use `COPY` when psycopg2 is available. Upsert inputs are
  validated up front: null keys and columns absent from the target are rejected
  with a clear error rather than an opaque SQL failure.

File resources support `replace`/`append` only (writes are atomic via
temp-file + rename, and appends align columns by name); relational modes require
a `db` resource.

### SQL dialects

The set-based SQL each load mode emits is produced by a **dialect compiler**, not
inlined per operation. `SqlLoadTarget` owns the mechanics (connection, staging,
introspection); a `SqlDialect` owns the *spelling* of each statement. Compilers
are selected per connection by SQLAlchemy dialect name from a registry
(entry-point group `pipeplan.sql_dialects`), falling back to a portable ANSI
compiler for anything unregistered.

Mainstream backends (SQLite, PostgreSQL, MySQL, SQL Server) each contribute only
their native-upsert spelling and otherwise share the ANSI correlated-subquery
forms. A niche backend is a self-contained subclass that overrides only what
diverges and touches no shared code — the bundled `AccessDialect` (Microsoft
Access/Jet) overrides `UPDATE`/`DELETE`/close-version to `INNER JOIN`
action-queries (Access rejects the subquery forms), uses `-1`/`0` booleans, and
declares no native upsert (so it uses the portable update-then-insert
simulation). Adding support for another niche database — Firebird, Teradata,
DuckDB — is one registered subclass, out-of-tree if you like.

## Incremental extract

`incremental: { strategy: watermark, cursor: <col>, lookback: 1d, initial: ... }`
reads only rows whose cursor advanced since the persisted high-water mark
(stored in `orchestration.watermark_store`), with a safety lookback window.

## Extending

```toml
[project.entry-points."pipeplan.transforms"]
my_action = "my_pkg.module:MyTransform"

[project.entry-points."pipeplan.notifiers"]
slack = "my_pkg.module:make_slack_notifier"

[project.entry-points."pipeplan.load_strategies"]
merge = "my_pkg.module:MergeStrategy"

[project.entry-points."pipeplan.sql_dialects"]
firebird = "my_pkg.module:FirebirdDialect"

[project.entry-points."pipeplan.adapters"]
mongodb = "my_pkg.module:MongoAdapter"
```

## Tests

```bash
pytest -q
```

See `MIGRATION.md` for the mapping from the pre-1.0 JSON format to v1.
